# benchtop-data

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: products.csv  products_schema.yaml  usage.py
src/data_pipeline/: __init__.py  cli.py  config.py  exceptions.py  logging.py  logging_config.py  ui.py
src/data_pipeline/embeddings/: __init__.py
src/data_pipeline/pipeline/: __init__.py  file_loader.py
src/data_pipeline/query/: __init__.py  engine.py  initialization.py  prompts.py  setup.py  sql_setup.py  vector_setup.py  workflow_setup.py
src/data_pipeline/query/agents/: __init__.py  config.py  parsing.py  refinement_agent.py  reflection.py  reflection_agent.py  sub_question.py  sub_question_agent.py
src/data_pipeline/query/llm/: __init__.py  factory.py  reasoning.py  wrapper.py
src/data_pipeline/query/routing/: __init__.py  dispatch.py  response_utils.py  router.py  workflow_protocol.py
src/data_pipeline/query/routing/custom_router/: __init__.py  context_keys.py  decomposition.py  dispatch.py  factory.py  refinement.py  reflection.py  response_utils.py  router.py  types.py
src/data_pipeline/query/routing/react_agent/: __init__.py  factory.py  workflow.py
src/data_pipeline/schema/: __init__.py
src/data_pipeline/semantic/: __init__.py
src/data_pipeline/storage/: __init__.py
tests/: conftest.py
tests/unit/: test_logging_config.py  test_schema.py  test_semantic.py
