[project]
name = "data-pipeline"
version = "0.1.0"
description = "General-purpose local AI data analysis pipeline"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=0.9.0",
    "duckdb-engine>=0.12.0",
    "chromadb>=0.4.0",
    "llama-index>=0.9.0",
    "llama-index-embeddings-ollama>=0.1.0",
    "llama-index-llms-ollama>=0.1.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    "pandera>=0.19.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "streamlit>=1.28.0",
]

[project.scripts]
data-pipeline = "data_pipeline.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

